--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,33 @@ version: "3"
 services:
   redis:
     image: redis
-    ports:
-      - "6479:6379"
+    command: redis-server
+
   postgres:
-    image: postgres
-    ports:
-      - "5532:5432"
+    image: postgres:12
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: outline
-  s3:
-    image: lphoward/fake-s3
-    ports:
-      - "4569:4569"
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=outline
+      - PGDATA=/pgdata
     volumes:
-      - ./fakes3:/fakes3_root
+      - ./data/postgresql:/pgdata
+
   outline:
-    image: outline:v001
-    command: yarn dev
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        pull: 1
+    image: outline:master
+    command: '/opt/outline/docker-start'
     ports:
       - "3000:3000"
-    volumes:
-      - .:/opt/outline
+    links:
+      - postgres
+      - redis
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=postgres://postgres:postgres@postgres/outline
+      - REDIS_URL=redis://redis:6379
+      - FORCE_HTTPS=false
+      - ENABLE_UPDATES=false
     depends_on:
       - postgres
       - redis
-      - s3
